--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,12 +5,9 @@ services:
     build: .
     ports:
       - "80:80"
-    image: ${DOCKER_USER_ID}/nginx
+
   production:
-
-    image: ${DOCKER_USER_ID}/nginx:${BUILD_NUMBER}
-
-
+    image: ${DOCKER_USER_ID}/nginx-app:${BUILD_NUMBER}
     ports:
       - "80:80"
   
