--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,5 +8,7 @@ services:
   production:
 
     image: ${DOCKER_USER_ID}/hw6:${BUILD_NUMBER}
+    volumes:
+      - .:/code
     ports:
       - "80:80"
