--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,14 @@
 version: '3.0'
 
 services:
-  web:
+  nginx-app:
     build: .
       
-    image: ${DOCKER_USER_ID}/hw5
+    image: ${DOCKER_USER_ID}/hw6
 
   production:
 
-    image: ${DOCKER_USER_ID}/hw5:${BUILD_NUMBER}
+    image: ${DOCKER_USER_ID}/hw6:${BUILD_NUMBER}
     restart: always
     ports:
       - "80:80"
